overflow problem fixed

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* I did not add the hamburger menu bar becaause we were not instructed to do so for the mobile responsiveness */
+/* Hamburger icon from fontawesome.com - https://fontawesome.com/license */
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap");
 
 * {
@@ -7,7 +8,9 @@
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
 }
-
+/* body {
+  overflow-x: hidden;
+} */
 div.nav-bar {
   display: flex;
   justify-content: space-between;
@@ -348,22 +351,37 @@ div.footer h6 {
 @media only screen and (max-width: 600px) {
   /* top navigation */
   div.nav-bar {
-    padding: 7px 7px;
+    padding: 7px 5px;
   }
 
   div.logo {
     font-size: 1.15rem;
   }
-
+  ul {
+    height: 40px;
+    width: 40px;
+    background: url("bars-solid.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  ul:hover {
+    background: #304353;
+    display: block;
+  }
+  ul:hover a {
+    display: block;
+  }
+  ul li a {
+    display: none;
+  }
+  ul li a:hover {
+    padding: 0.45rem;
+  }
   ul li {
     margin: 0 0.4vw;
     font-size: 0.7rem;
   }
-
-  ul li a:hover {
-    padding: 0.45rem;
-  }
-
   /* hero section */
 
   div.hero-section {
@@ -533,7 +551,7 @@ div.footer h6 {
     display: flex;
     justify-content: space-between;
     padding: 1rem 6rem;
-    width: 100vw;
+    width: inherit;
     background: #304353;
   }
 
@@ -624,6 +642,7 @@ div.footer h6 {
     width: 550px;
     height: 220px;
     position: relative;
+    display: flex;
   }
 
   div.background h4 {
@@ -642,9 +661,6 @@ div.footer h6 {
   }
 
   div.hero-background-pos {
-    position: absolute;
-    right: 0px;
-    left: 66%;
     background: #fff;
     width: 140px;
     height: 140px;
